0 letter spacing helps with theme css issues

--- a/public/assets/less/source/toolbar.less
+++ b/public/assets/less/source/toolbar.less
@@ -38,6 +38,7 @@
 ul.lasso-editor-controls{
     margin:0;
     padding:0;
+    letter-spacing: 0;
     list-style: none;
     height:@toolbar--height;
     line-height:1;
